[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rotator_library"
version = "1.16"
authors = [
    { name="ShmidtS", email="ShmidtS@users.noreply.github.com" },
]
description = "A robust Python client for intelligent API key rotation and retry logic, leveraging LiteLLM. It manages usage, handles various API errors (rate limits, server errors, authentication), and supports dynamic model discovery across multiple LLM providers."
license = "LGPL-3.0-only"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx",
    "orjson",
    "aiofiles",
    "aiohttp",
    "litellm",
    "cachetools",
    "rich",
    "pydantic",
]

[project.urls]
"Homepage" = "https://github.com/ShmidtS/LLM-API-Key-Proxy"
"Bug Tracker" = "https://github.com/ShmidtS/LLM-API-Key-Proxy/issues"

[tool.setuptools.packages]
find = { where = ["."], include = ["rotator_library*"] }
